--- a/src/app/components/social/social.component.html
+++ b/src/app/components/social/social.component.html
@@ -1,1 +1,6 @@
-<p>social works!</p>
+<div>
+    <a href="https://www.instagram.com/Francis.Seura/"><img src="../../../assets/instagram.png" id="Instagram"></a>
+    <a href="https://www.facebook.com/francis.seura.79/"><img src="../../../assets/facebook.png" id="Facebook"></a>
+    <a href="https://github.com/Francis1999S"><img src="../../../assets/github.png" id="GitHub"></a>
+    <a href="https://www.linkedin.com/in/francis-gabriel-seura-366574193/"><img src="../../../assets/linkedin.png" id="LinkedIn"></a>
+</div>
