Añadido Bootstrap a Angular

--- a/src/app/components/acerca-de/acerca-de.component.html
+++ b/src/app/components/acerca-de/acerca-de.component.html
@@ -1,1 +1,20 @@
-<p>acerca-de works!</p>
+
+    <div class="row">
+        <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
+            <img src="../../../assets/Perfil 2.jpg" class="img-fluid" id="Perfil">
+        </div>
+        <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
+            <p>Francis Seura</p>
+            <p>Full Stack Developer Jr</p>
+        </div>
+        <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
+            <span>
+                <h1>Acerca de mí</h1>
+                <p>Lorem ipsum dolor sit amet consectetur
+                    adipisicing elit. Sed hic modi vero. Numquam
+                    corrupti cupiditate porro aliquid iusto ipsum, libero
+                    inventore aperiam nam, fuga explicabo rerum, sequi
+                    repellendus nulla? Repudiandae?</p>
+            </span>
+        </div>
+    </div>
